# esto

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
esto/: Cargo.toml  build.rs
esto-core/: Cargo.toml
esto-core/src/: errors.rs  index.rs  lib.rs  record.rs  storage.rs
esto/proto/: esto_rpc.proto  store.proto
esto/src/: main.rs  server.rs
test/pyclient/: esto_client.py  esto_rpc_pb2.py  esto_rpc_pb2_grpc.py
