[package]
name = "esto-core"
version = "0.1.0"
authors = ["Ross Jones"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
rocksdb = "0.14.0"
serde = "1.0.106"
test_dir = "0.1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }