[package]
name = "esto"
version = "0.1.0"
authors = ["Ross Jones"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esto-core = { path = "../esto-core" }
tonic = "0.2.0"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
ctrlc = "3.1.4"
futures-util = "0.3.5"

[build-dependencies]
tonic-build = "0.2.0"