[package]
name = "esto"
version = "0.1.0"
authors = ["Ross Jones"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esto-core = { path = "../esto-core" }
tonic = "0.2.0"
prost = "0.6"
tokio = { version = "1.18", features = ["macros", "sync", "rt-multi-thread"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
ctrlc = "3.2.2"
futures-util = "0.3.11"
regex = "1.5.5"

[build-dependencies]
tonic-build = "0.2.0"